hotfix: nav font prevent wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ font-weight: 400;
   align-items: start;
   padding-left: .1rem;
   line-height: 2; 
+  white-space: nowrap;
 }
 
 
